testdata/de/dm/intellij/liferay/language/java/LiferayJavaDeprecationInspectionTest/MyServlet.java
<warning descr="Java EE libraries are no longer compatible and must be replaced with updated Jakarta EE versions. (see LPD-46462)">import <error descr="Cannot resolve symbol 'javax'">javax</error>.servlet.Servlet;</warning>

public class MyServlet {

}
